added custom color classes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29679,3 +29679,43 @@ readers do not read off random characters that represent icons */
   background-color: #007bff;
 }
 
+.color-blue {
+  color: #3490dc;
+}
+
+.color-indigo {
+  color: #6574cd;
+}
+
+.color-purple {
+  color: #9561e2;
+}
+
+.color-pink {
+  color: #f66D9b;
+}
+
+.color-red {
+  color: #e3342f;
+}
+
+.color-orange {
+  color: #f6993f;
+}
+
+.color-yellow {
+  color: #ffed4a;
+}
+
+.color-green {
+  color: #38c172;
+}
+
+.color-teal {
+  color: #4dc0b5;
+}
+
+.color-cyan {
+  color: #6cb2eb;
+}
+
