--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,3 +23,43 @@ $fa-font-path: "../webfonts";
     color: #ffffff;
     background-color: #007bff;
 }
+
+.color-blue {
+    color: $blue;
+}
+
+.color-indigo {
+    color: $indigo;
+}
+
+.color-purple {
+    color: $purple;
+}
+
+.color-pink {
+    color: $pink;
+}
+
+.color-red {
+    color: $red;
+}
+
+.color-orange {
+    color: $orange;
+}
+
+.color-yellow {
+    color: $yellow;
+}
+
+.color-green {
+    color: $green;
+}
+
+.color-teal {
+    color: $teal;
+}
+
+.color-cyan {
+    color: $cyan;
+}
